--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "engines": { "node": ">= 0.6.0" },
   "dependencies": {
     "socketstream": "https://github.com/socketstream/socketstream/tarball/master",
+    "async": "latest",
+      "express": "latest",
+      "livereload": "latest",
+      "mongoose": "latest",
+      "underscore": "latest",
     "ss-coffee": "0.1.x",
     "ss-stylus": "0.1.x",
     "ss-jade": "0.1.x",
