make fb app setting configurable.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ss-stylus": "latest",
     "ss-jade": "latest",
     "ss-hogan": "latest",
+      "ejs": "latest",
       "socketstream": "https://github.com/socketstream/socketstream/tarball/master"
   }
 }
